--- a/src/components/Country/Country.css
+++ b/src/components/Country/Country.css
@@ -4,3 +4,12 @@
     margin: 20px;
     border-radius: 15px;
 }
+
+
+.visited {
+    background-color: rgb(3, 3, 39);
+}
+
+.non-visited {
+    background-color: rgb(22, 18, 18);
+}
